[gd_scene load_steps=6 format=2]

[ext_resource path="res://Sprites/balaPony.png" type="Texture" id=1]
[ext_resource path="res://diegocabezadehuevo.gd" type="Script" id=2]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "mover",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=2]
radius = 124.862

[sub_resource type="CapsuleShape2D" id=3]
radius = 159.137
height = 130.164

[node name="KinematicBody2D" type="KinematicBody2D"]
position = Vector2( 349.311, 236.174 )
scale = Vector2( 0.3, 0.3 )
collision_mask = 13
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "mover"
flip_h = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="hurtbox" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 12

[node name="CollisionShape2D" type="CollisionShape2D" parent="hurtbox"]
position = Vector2( 10.0114, 8.89893 )
shape = SubResource( 3 )

[node name="bala1" type="Position2D" parent="."]
position = Vector2( -8.0647, 35.6399 )

[node name="stun" type="Timer" parent="."]
wait_time = 0.2

[connection signal="area_entered" from="hurtbox" to="." method="_on_hurtbox_area_entered"]
[connection signal="timeout" from="stun" to="." method="_on_stun_timeout"]
